@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>511</width>
-    <height>508</height>
+    <height>466</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" >
@@ -32,21 +32,6 @@
        <string>&amp;Advanced</string>
       </attribute>
       <layout class="QVBoxLayout" >
-       <property name="spacing" >
-        <number>6</number>
-       </property>
-       <property name="leftMargin" >
-        <number>9</number>
-       </property>
-       <property name="topMargin" >
-        <number>9</number>
-       </property>
-       <property name="rightMargin" >
-        <number>9</number>
-       </property>
-       <property name="bottomMargin" >
-        <number>9</number>
-       </property>
        <item>
         <layout class="QHBoxLayout" >
          <property name="spacing" >
@@ -119,6 +104,19 @@
         </layout>
        </item>
        <item>
+        <widget class="Line" name="line_2" >
+         <property name="sizePolicy" >
+          <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
         <widget class="QCheckBox" name="mplayer_use_window_check" >
          <property name="text" >
           <string>&amp;Run MPlayer in its own window</string>
@@ -152,6 +150,35 @@
           <string>Repaint the backgroun&amp;d of the video window</string>
          </property>
         </widget>
+       </item>
+       <item>
+        <widget class="Line" name="line_3" >
+         <property name="sizePolicy" >
+          <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+         <property name="orientation" >
+          <enum>Qt::Horizontal</enum>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_7" >
+         <property name="text" >
+          <string>R&amp;un the following list of actions every time a file is opened. The actions must be separated with spaces:</string>
+         </property>
+         <property name="wordWrap" >
+          <bool>true</bool>
+         </property>
+         <property name="buddy" >
+          <cstring>actions_to_run_edit</cstring>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="actions_to_run_edit" />
        </item>
        <item>
         <widget class="Line" name="line" >
@@ -241,7 +268,7 @@
          </property>
          <property name="sizeHint" >
           <size>
-           <width>20</width>
+           <width>489</width>
            <height>20</height>
           </size>
          </property>
@@ -887,6 +914,7 @@ The drop-down lists may provide already made regular expression for several lang
   <tabstop>correct_pts_check</tabstop>
   <tabstop>shortnames_check</tabstop>
   <tabstop>clear_background_check</tabstop>
+  <tabstop>actions_to_run_edit</tabstop>
   <tabstop>colorkey_view</tabstop>
   <tabstop>changeButton</tabstop>
   <tabstop>mplayer_args_edit</tabstop>
